[package]
name = "dpuse-connector-file-store-emulator-core"
version = "0.1.0"
edition = "2021"
authors = ["Data Positioning <support@dpuse.app>"]
description = "Rust helpers that compile to WebAssembly for the dpuse file store connector."
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
dpuse-engine-shared = { path = "../../../../dpuse-engine/rust/dpuse_engine_shared" }
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
